--- a/docs/tutorials/operator-back-propagation.ipynb
+++ b/docs/tutorials/operator-back-propagation.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "## Background\n",
     "\n",
-    "Operator backpropagation is a technique which involves absorbing operations from the end of a quantum circuit into the measured observable, generally reducing the depth of the circuit at the cost of additional terms in the observable. The goal is to backpropagate as much of the circuit as possible without allowing the observable to grow too large. A Qiskit-based implementation is available in the OBP Qiskit addon, more details can be found in the corresponding [docs](https://docs.quantum.ibm.com/guides/qiskit-addons-obp) with a [simple example](https://docs.quantum.ibm.com/guides/qiskit-addons-obp-get-started) to get started.\n",
+    "Operator backpropagation is a technique which involves absorbing operations from the end of a quantum circuit into the measured observable, generally reducing the depth of the circuit at the cost of additional terms in the observable. The goal is to backpropagate as much of the circuit as possible without allowing the observable to grow too large. A Qiskit-based implementation is available in the OBP Qiskit addon, more details can be found in the corresponding [docs](/docs/guides/qiskit-addons-obp) with a [simple example](/docs/guides/qiskit-addons-obp-get-started) to get started.\n",
     "\n",
     "Consider an example circuit for which an observable $O = \\sum_P c_P P$ is to be measured, where $P$ are Paulis and $c_P$ are coefficients. Let us denote the circuit as a single unitary $U$ which can be logically partitioned into $U = U_C U_Q$ as shown in the figure below.\n",
     "\n",
@@ -53,7 +53,7 @@
     "\n",
     "In the above example, if $\\{P,P_s\\} = 0$, then we need to execute two quantum circuits, instead of one, to calculate the expectation value. Therefore, backpropagation may increase the number of terms in the observable, leading to higher number of circuit execution. One way to allow for deeper backpropagation into the circuit, while preventing the operator from growing too large, is to truncate terms with small coefficients, rather than adding them to the operator. For instance, in the above example, one may choose to truncate the term involving $P_sP$ provided that $\\theta_s$ is sufficiently small. Truncating terms can result in fewer quantum circuits to execute, but doing so results in some error in the final expectation value calculation proportional to the magnitude of the truncated terms' coefficients.\n",
     "\n",
-    "In this tutorial we will implement a [Qiskit pattern](https://docs.quantum.ibm.com/guides/intro-to-patterns) for simulating the quantum dynamics of a Heisenberg spin chain using <a href=\"https://github.com/Qiskit/qiskit-addon-obp\">qiskit-addon-obp</a>."
+    "In this tutorial we will implement a [Qiskit pattern](/docs/guides/intro-to-patterns) for simulating the quantum dynamics of a Heisenberg spin chain using <a href=\"https://github.com/Qiskit/qiskit-addon-obp\">qiskit-addon-obp</a>."
    ]
   },
   {
@@ -129,8 +129,8 @@
     "\n",
     "The [qiskit_addon_utils](https://github.com/Qiskit/qiskit-addon-utils) package provides some reusable functionalities for various purposes.\n",
     "\n",
-    "Its [qiskit_addon_utils.problem_generators](https://docs.quantum.ibm.com/api/qiskit-addon-utils/problem-generators) module provides functions to generate Heisenberg-like Hamiltonians on a given connectivity graph.\n",
-    "This graph can be either a [rustworkx.PyGraph](https://www.rustworkx.org/apiref/rustworkx.PyGraph.html) or a [CouplingMap](https://docs.quantum.ibm.com/api/qiskit/qiskit.transpiler.CouplingMap) making it easy to use in Qiskit-centric workflows.\n",
+    "Its [qiskit_addon_utils.problem_generators](/docs/api/qiskit-addon-utils/problem-generators) module provides functions to generate Heisenberg-like Hamiltonians on a given connectivity graph.\n",
+    "This graph can be either a [rustworkx.PyGraph](https://www.rustworkx.org/apiref/rustworkx.PyGraph.html) or a [CouplingMap](/docs/api/qiskit/qiskit.transpiler.CouplingMap) making it easy to use in Qiskit-centric workflows.\n",
     "\n",
     "In the following, we generate a linear chain `CouplingMap` of 10 qubits."
    ]
@@ -221,7 +221,7 @@
    "metadata": {},
    "source": [
     "From the qubit operator, we can generate a quantum circuit which models its time evolution.\n",
-    "Once again, the [qiskit_addon_utils.problem_generators](https://docs.quantum.ibm.com/api/qiskit-addon-utils/problem-generators) module comes to the rescue with a handy function do just that:"
+    "Once again, the [qiskit_addon_utils.problem_generators](/docs/api/qiskit-addon-utils/problem-generators) module comes to the rescue with a handy function do just that:"
    ]
   },
   {
@@ -259,7 +259,7 @@
     "### Step 2: Optimize problem for quantum hardware execution\n",
     "#### Create circuit slices to backpropagate\n",
     "\n",
-    "Remember, the ``backpropagate`` function will backpropagate entire circuit slices at a time, so the choice of how to slice can have an impact on how well backpropagation performs for a given problem. Here, we will group gates of the same type into slices using the [slice_by_gate_types](https://docs.quantum.ibm.com/api/qiskit-addon-utils/slicing#slice_by_gate_types) function.\n",
+    "Remember, the ``backpropagate`` function will backpropagate entire circuit slices at a time, so the choice of how to slice can have an impact on how well backpropagation performs for a given problem. Here, we will group gates of the same type into slices using the [slice_by_gate_types](/docs/api/qiskit-addon-utils/slicing#slice_by_gate_types) function.\n",
     "\n",
     "For a more detailed discussion on circuit slicing, check out this [how-to guide](https://qiskit.github.io/qiskit-addon-utils/how_tos/create_circuit_slices.html) of the [qiskit-addon-utils](https://github.com/Qiskit/qiskit-addon-utils) package."
    ]
@@ -292,7 +292,7 @@
     "\n",
     "During backpropagation, the number of terms in the operator will generally approach $4^N$ quickly, where $N$ is the number of qubits. When two terms in the operator do not commute qubit-wise, we need separate circuits to obtain the expectation values corresponding to them. For example, if we have a 2-qubit observable $O = 0.1 XX + 0.3 IZ - 0.5 IX$, then since $[XX,IX] = 0$, measurement in a single basis is sufficient to calculate the expectation values for these two terms. However, $IZ$ anti-commutes with the other two terms. So we need a separate basis measurement to calculate the expectation value of $IZ$. In other words, we need two, instead of one, circuit to calculate $\\langle O \\rangle$. As the number of terms in the operator increase, there is a possibility that the required number of circuit executions also increase.\n",
     "\n",
-    "The size of the operator can be bounded by specifying the ``operator_budget`` kwarg of the ``backpropagate`` function, which accepts an [OperatorBudget](https://docs.quantum.ibm.com/api/qiskit-addon-obp/utils-simplify#operatorbudget) instance.\n",
+    "The size of the operator can be bounded by specifying the ``operator_budget`` kwarg of the ``backpropagate`` function, which accepts an [OperatorBudget](/docs/api/qiskit-addon-obp/utils-simplify#operatorbudget) instance.\n",
     "\n",
     "To control the amount of extra resources (time) allocated, we restrict the maximum number of qubit-wise commuting Pauli groups that the backpropagated observable is allowed to have. Here we specify that backpropagation should stop when the number of qubit-wise commuting Pauli groups in the operator grows past 8."
    ]
@@ -405,7 +405,7 @@
    "id": "d25b9701-f1b1-4230-9dcc-554b85e91cf7",
    "metadata": {},
    "source": [
-    "Next, we will specify the same problem with the same constraints on the size of the output observable. However, this time, we allot an error budget to each slice using the [setup_budget](https://docs.quantum.ibm.com/api/qiskit-addon-obp/utils-truncating#setup_budget) function. Pauli terms with small coefficients will be truncated from each slice until the error budget is filled, and leftover budget will be added to the following slice's budget. Note that in this case, the transformation due to backpropagation is approximate since some of the terms in the operator are truncated.\n",
+    "Next, we will specify the same problem with the same constraints on the size of the output observable. However, this time, we allot an error budget to each slice using the [setup_budget](/docs/api/qiskit-addon-obp/utils-truncating#setup_budget) function. Pauli terms with small coefficients will be truncated from each slice until the error budget is filled, and leftover budget will be added to the following slice's budget. Note that in this case, the transformation due to backpropagation is approximate since some of the terms in the operator are truncated.\n",
     "\n",
     "In order to enable this truncation, we need to setup our error budget like so:"
    ]
@@ -545,7 +545,7 @@
    "id": "8b4487c1-b1e6-4ae8-b02d-c8bf980ad19b",
    "metadata": {},
    "source": [
-    "We create the <a href=\"https://docs.quantum.ibm.com/guides/primitive-input-output\">Primitive Unified Bloc (PUB)</a> for each of the three cases."
+    "We create the <a href=\"/docs/guides/primitive-input-output\">Primitive Unified Bloc (PUB)</a> for each of the three cases."
    ]
   },
   {
@@ -568,7 +568,7 @@
     "### Step 3: Execute using Qiskit primitives\n",
     "#### Calculate expectation value\n",
     "\n",
-    "Finally, we can run the backpropagated experiments and compare them with the full experiment using the noiseless [StatevectorEstimator](https://docs.quantum.ibm.com/api/qiskit/qiskit.primitives.StatevectorEstimator)."
+    "Finally, we can run the backpropagated experiments and compare them with the full experiment using the noiseless [StatevectorEstimator](/docs/api/qiskit/qiskit.primitives.StatevectorEstimator)."
    ]
   },
   {
@@ -600,7 +600,7 @@
    "id": "2c95ead4-3a9f-423b-b3ad-a9109a8420b2",
    "metadata": {},
    "source": [
-    "We shall use <a href=\"https://docs.quantum.ibm.com/guides/configure-error-mitigation\">resilience_level</a> = 2 for this example."
+    "We shall use <a href=\"/docs/guides/configure-error-mitigation\">resilience_level</a> = 2 for this example."
    ]
   },
   {
