--- a/docs/tutorials/periodic-boundary-conditions-with-circuit-cutting.ipynb
+++ b/docs/tutorials/periodic-boundary-conditions-with-circuit-cutting.ipynb
@@ -598,7 +598,7 @@
    "source": [
     "At this point, the subexperiments contains circuits with some 1-qubit gates that are not in the basis gate set. This is because the cut qubits are measured in different basis, and the rotation gates used for this does not necessarily belong to the basis gate set. For example, measurement in X basis implies applying a Hadamard gate before the usual measurement in Z basis. But Hadamard is not a part of the basis gate set.\n",
     "\n",
-    "Instead of applying the entire transpilation process on each of the circuits in the subexperiments, we can use specific transpilation passes. Refer to <a href=\"https://docs.quantum.ibm.com/api/qiskit/transpiler_passes\">this documentation</a> for a detailed description of all the available transpilation passes.\n",
+    "Instead of applying the entire transpilation process on each of the circuits in the subexperiments, we can use specific transpilation passes. Refer to <a href=\"/docs/api/qiskit/transpiler_passes\">this documentation</a> for a detailed description of all the available transpilation passes.\n",
     "\n",
     "We shall apply ```BasisTranslator``` and then ```Optimize1qGatesDecomposition``` passes to ensure that all the gates in these circuits belong to the basis gate set. Using these two passes is faster than the entire transpilation process, since other steps such as routing, initial layout selection etc. are not performed again."
    ]
