--- a/docs/tutorials/probabilistic-error-amplification.ipynb
+++ b/docs/tutorials/probabilistic-error-amplification.ipynb
@@ -661,12 +661,12 @@
     "\n",
     "- Pick a qubit layout that maps the virtual qubits of your circuit to physical qubits on the hardware.\n",
     "- Insert swap gates as needed to route interactions between qubits that are not connected.\n",
-    "- Translate the gates in our circuit to [Instruction Set Architecture (ISA)](https://docs.quantum.ibm.com/transpile#instruction-set-architecture) instructions that can directly be executed on the hardware.\n",
+    "- Translate the gates in our circuit to [Instruction Set Architecture (ISA)](/docs/guides/transpile#instruction-set-architecture) instructions that can directly be executed on the hardware.\n",
     "- Perform circuit optimizations to minimize the circuit depth and gate count.\n",
     "\n",
     "Although the transpiler built into Qiskit can perform all of these steps, this notebook demonstrates building the utility-scale Trotter circuit in a ground-up fashion. Select the good physical qubits and define entangling layers on connected qubit pairs from those selected qubits. Nonetheless, you still need to translate non-ISA gates in the circuit and avail any circuit optimization offered by the transpiler.\n",
     "\n",
-    "Transpile your circuit for the chosen backend by creating a pass manager and then running the pass manager on the circuit. Also, fix the initial layout of the circuit to the already selected `good_qubits`. An easy way to create a pass manager is to use the [`generate_preset_pass_manager`](https://docs.quantum.ibm.com/api/qiskit/transpiler_preset#qiskit.transpiler.preset_passmanagers.generate_preset_pass_manager) function. See [Transpile with pass managers](https://docs.quantum.ibm.com/transpile/transpile-with-pass-managers) for a more detailed explanation of transpiling with pass managers."
+    "Transpile your circuit for the chosen backend by creating a pass manager and then running the pass manager on the circuit. Also, fix the initial layout of the circuit to the already selected `good_qubits`. An easy way to create a pass manager is to use the [`generate_preset_pass_manager`](/docs/api/qiskit/qiskit.transpiler.generate_preset_pass_manager) function. See [Transpile with pass managers](/docs/guides/transpile-with-pass-managers) for a more detailed explanation of transpiling with pass managers."
    ]
   },
   {
@@ -724,7 +724,7 @@
    "source": [
     "The transpilation process has mapped the virtual qubits of your circuit to physical qubits on the hardware. The information about the qubit layout is stored in the `layout` attribute of the transpiled circuit. Your observable is also defined in terms of the virtual qubits, so you need to apply this layout to the observable. This is done using the `apply_layout` method of `SparsePauliOp`.\n",
     "\n",
-    "Notice that each observable is wrapped in a list in the following code block. It is done to _broadcast_ with parameter values so that each qubit observable is measured for each theta value. The broadcasting rules for primitives can be found [here](https://docs.quantum.ibm.com/run/primitives)."
+    "Notice that each observable is wrapped in a list in the following code block. It is done to _broadcast_ with parameter values so that each qubit observable is measured for each theta value. The broadcasting rules for primitives can be found [here](/docs/guides/primitives)."
    ]
   },
   {
@@ -845,7 +845,7 @@
     "* __amplifier__: The method to use when amplifying noise to the intended noise factors.\n",
     "    Allowed values are `\"gate_folding\"`, which amplifies by repeating two-qubit basis gates,\n",
     "    and `\"pea\"`, which amplifies by probabilistic sampling after learning the Pauli-twirled\n",
-    "    noise model for layers of twirled two-qubit basis gates. There are also `\"gate_folding_front\"` and `\"gate_folding_back\"` options which are explained in the [API documentation](https://docs.quantum.ibm.com/api/qiskit-ibm-runtime/options-zne-options#amplifier)\n",
+    "    noise model for layers of twirled two-qubit basis gates. There are also `\"gate_folding_front\"` and `\"gate_folding_back\"` options which are explained in the [API documentation](/docs/api/qiskit-ibm-runtime/options-zne-options#amplifier)\n",
     "* __extrapolated_noise_factors__: Specify one or more noise factor values at which to evaluate the\n",
     "    extrapolated models. If a sequence of values, the returned results will be array-valued with specified noise factor evaluated for the extrapolation model. A value\n",
     "    of 0 corresponds to zero-noise extrapolation."
