--- a/docs/tutorials/repetition-codes.ipynb
+++ b/docs/tutorials/repetition-codes.ipynb
@@ -233,7 +233,7 @@
    "source": [
     "## Step 2. Optimize the problem for quantum execution\n",
     "\n",
-    "To reduce the total job execution time, Qiskit primitives only accept circuits and observables that conforms to the instructions and connectivity supported by the target system (referred to as instruction set architecture (ISA) circuits and observables).  [Learn more about transpilation.](https://docs.quantum.ibm.com/transpile)"
+    "To reduce the total job execution time, Qiskit primitives only accept circuits and observables that conforms to the instructions and connectivity supported by the target system (referred to as instruction set architecture (ISA) circuits and observables).  [Learn more about transpilation.](/docs/guides/transpile)"
    ]
   },
   {
