--- a/docs/tutorials/spin-chain-vqe.ipynb
+++ b/docs/tutorials/spin-chain-vqe.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "## Background\n",
     "\n",
-    "In this tutorial, we will show how to build, deploy, and run a `Qiskit Pattern` for simulating a Heisenberg chain and estimating its ground state energy. For more information on `Qiskit Patterns` and how `Qiskit Serverless` can be used to deploy them to the cloud for managed execution, visit our [docs page on the IBM Quantum Platform](https://docs.quantum.ibm.com/run/quantum-serverless)."
+    "In this tutorial, we will show how to build, deploy, and run a `Qiskit Pattern` for simulating a Heisenberg chain and estimating its ground state energy. For more information on `Qiskit Patterns` and how `Qiskit Serverless` can be used to deploy them to the cloud for managed execution, visit our [docs page on the IBM Quantum Platform](/docs/guides/serverless)."
    ]
   },
   {
