--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -31,7 +31,7 @@ This section summarizes the recent enhancements and new features for IBM Quantum
 
 **8 May 2025**
 
-- Released Flex Plan offering - a new resource consumption offering.
+- [Flex Plan](https://www.ibm.com/quantum/blog/flex-plan), a new resource consumption offering, has been released.
 - [Tutorials](https://quantum.cloud.ibm.com/docs/tutorials) are now available on the new platform to help users with use-case exploration.
 - Updated Session OpenAPI schema: `backend_name` field is now nullable.
 - Launched the [Qiskit Functions Catalog](https://quantum.cloud.ibm.com/functions) on the new platform.
