Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/docs/guides/run-jobs-batch.mdx
+++ b/docs/guides/run-jobs-batch.mdx
@@ -108,7 +108,7 @@ batch.close()
 <span id="batch-details"></span>
 ## Determine batch details
 
-For a comprehensive overview of a batch's configuration and status, including its interactive and maximum TTL, use the  `Batch.details` method.
+For a comprehensive overview of a batch's configuration and status, including its interactive and maximum TTL, use the  the [`details` method](/docs/api/qiskit-ibm-runtime/batch#details) from the `Batch` class.
 
 ```python
 from qiskit_ibm_runtime import QiskitRuntimeService, batch, SamplerV2 as Sampler
