--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -57,9 +57,58 @@
    "id": "95b2f280-f685-455f-83e9-b172445d7c6a",
    "metadata": {},
    "source": [
-    "Qiskit Serverless allows you to manage compute and data across your [Qiskit pattern](./intro-to-patterns), including CPUs, QPUs, and other compute accelerators.\n",
+    "With Qiskit Serverless, you can manage compute and data across your [Qiskit pattern](/docs/guides/intro-to-patterns), including CPUs, QPUs, and other compute accelerators."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "380354c0-5cab-464d-b10f-c94055de3605",
+   "metadata": {},
+   "source": [
+    "## Set detailed statuses\n",
     "\n",
-    "## Parallel workflows"
+    "\n",
+    "Serverless workloads have several stages across a workflow. By default, the following statuses are viewable with `job.status()`:\n",
+    "\n",
+    "- **`QUEUED`**: the workload is queued for classical resources\n",
+    "- **`INITIALIZING`**: the workload is set up\n",
+    "- **`RUNNING`**: the workload is currently running on classical resources\n",
+    "- **`DONE`**: the workload has successfully completed\n",
+    "\n",
+    "You can also set custom statuses that further describe the specific workflow stage, as follows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a69df8bc-5033-45bf-a837-cffa9d29b844",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qiskit_serverless import update_status, Job\n",
+    "\n",
+    "## If your function has a mapping stage, particularly application functions, you can set the status to \"RUNNING: MAPPING\" as follows:\n",
+    "update_status(Job.MAPPING)\n",
+    "\n",
+    "## While handling transpilation, error suppression, and so forth, you can set the status to \"RUNNING: OPTIMIZING_FOR_HARDWARE\":\n",
+    "update_status(Job.OPTIMIZING_HARDWARE)\n",
+    "\n",
+    "## After you submit jobs to Qiskit Runtime, the underlying quantum job will be queued. You can set status to \"RUNNING: WAITING_FOR_QPU\":\n",
+    "update_status(Job.WAITING_QPU)\n",
+    "\n",
+    "## When the Qiskit Runtime job starts running on the QPU, set the following status \"RUNNING: EXECUTING_QPU\":\n",
+    "update_status(Job.EXECUTING_QPU)\n",
+    "\n",
+    "## Once QPU is completed and post-processing has begun, set the status \"RUNNING: POST_PROCESSING\":\n",
+    "update_status(Job.POST_PROCESSING)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8746eae-6f15-4faf-8771-0f3062efc723",
+   "metadata": {},
+   "source": [
+    "After successful completion of this workload (with `save_result()`), this status will be updated to `DONE` automatically."
    ]
   },
   {
@@ -67,6 +116,8 @@
    "id": "b2d40a63-3359-46e9-8f1b-4746b449b407",
    "metadata": {},
    "source": [
+    "## Parallel workflows\n",
+    "\n",
     "For classical tasks that can be parallelized, use the `@distribute_task` decorator to define compute requirements needed to perform a task. Start by recalling the `transpile_remote.py` example from the [Write your first Qiskit Serverless program](./serverless-first-program) topic with the following code.\n",
     "\n",
     "<LegacyContent>\n",
@@ -79,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9e41cd2f-bce6-4c8a-8e44-537c18b3023c",
    "metadata": {
     "tags": [
@@ -96,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "475d82f0-15cc-4db3-b3b0-54b07822b2a0",
    "metadata": {},
    "outputs": [
@@ -104,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ./source_files/transpile_remote.py\n"
+      "Overwriting ./source_files/transpile_remote.py\n"
      ]
     }
    ],
@@ -133,12 +184,39 @@
    "id": "a5914f1d-f898-4db4-8d1e-ccc8081883b9",
    "metadata": {},
    "source": [
-    "In this example, you decorated the `transpile_remote()` function with `@distribute_task(target={\"cpu\": 1})`. When run, this creates an asynchronous parallel worker task with a single CPU core, and returns with a reference to track the worker. To fetch the result, pass the reference to the `get()` function."
+    "In this example, you decorated the `transpile_remote()` function with `@distribute_task(target={\"cpu\": 1})`. When run, this creates an asynchronous parallel worker task with a single CPU core, and returns with a reference to track the worker. To fetch the result, pass the reference to the `get()` function. We can use this to run multiple parallel tasks:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "id": "e8fd31e6-9ab9-4d75-9ef9-a2b9ff9ad37a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appending to ./source_files/transpile_remote.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile --append ./source_files/transpile_remote.py\n",
+    "\n",
+    "from time import time\n",
+    "from qiskit_serverless import get, get_arguments, save_result, update_status, Job\n",
+    "\n",
+    "# Get arguments\n",
+    "arguments = get_arguments()\n",
+    "circuit = arguments.get(\"circuit\")\n",
+    "optimization_level = arguments.get(\"optimization_level\")\n",
+    "backend = arguments.get(\"backend\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "74fdcd4a-01cd-46ca-aa24-2a8a3605346f",
    "metadata": {},
    "outputs": [
@@ -152,66 +230,25 @@
    ],
    "source": [
     "%%writefile --append ./source_files/transpile_remote.py\n",
+    "# Start distributed transpilation\n",
     "\n",
-    "from qiskit_serverless import get, get_arguments, save_result\n",
+    "update_status(Job.OPTIMIZING_HARDWARE)\n",
     "\n",
-    "arguments = get_arguments()\n",
-    "circuit = arguments.get(\"circuit\")\n",
-    "optimization_level = arguments.get(\"optimization_level\")\n",
-    "backend = arguments.get(\"backend\")\n",
-    "\n",
-    "transpile_worker_reference = transpile_remote(\n",
-    "    circuit,\n",
-    "    optimization_level,\n",
-    "    backend\n",
-    ")\n",
-    "result = get(transpile_worker_reference)\n",
-    "save_result(result)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "268d5ef6-12cf-4ba5-95a3-f7460e4b3bfc",
-   "metadata": {},
-   "source": [
-    "You can also create and run multiple parallel tasks as follows."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "ac99b4a0-4a42-4c43-869d-265344b70359",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to ./source_files/transpile_remote.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile --append ./source_files/transpile_remote.py\n",
-    "\n",
+    "start_time = time()\n",
     "transpile_worker_references = [\n",
     "    transpile_remote(circuit, optimization_level, backend)\n",
     "    for circuit in arguments.get(\"circuit_list\")\n",
     "]\n",
     "\n",
-    "results = get(transpile_worker_references)\n",
-    "save_result(results)  # Overwrites any previously saved results"
+    "transpiled_circuits = get(transpile_worker_references)\n",
+    "end_time = time()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "757f81e9-3981-4358-a1a2-d3262c7cddcd",
-   "metadata": {
-    "tags": [
-     "remove-cell"
-    ]
-   },
+   "execution_count": 6,
+   "id": "81696ede-3aa5-4e8c-9d35-fdd70c1bf4db",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -223,14 +260,26 @@
    ],
    "source": [
     "%%writefile --append ./source_files/transpile_remote.py\n",
-    "# This cell is hidden from users. It checks the transpilation ran correctly.\n",
-    "from qiskit import QuantumCircuit\n",
-    "assert all(isinstance(result, QuantumCircuit) for result in results)"
+    "# Save result, with metadata\n",
+    "\n",
+    "result = {\n",
+    "    \"circuits\": transpiled_circuits,\n",
+    "    \"metadata\": {\n",
+    "        \"resource_usage\": {\n",
+    "            \"RUNNING: OPTIMIZING_FOR_HARDWARE\": {\n",
+    "                \"CPU_TIME\": end_time - start_time,\n",
+    "                \"QPU_TIME\": 0,\n",
+    "            },\n",
+    "        }\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "save_result(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "df28a92c-3585-49f0-a2ea-828a34638684",
    "metadata": {
     "tags": [
@@ -242,62 +291,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waiting for job (status 'QUEUED')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'QUEUED')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'QUEUED')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'INITIALIZING')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'RUNNING')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'RUNNING')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'RUNNING')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'RUNNING')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Waiting for job (status 'QUEUED')\n",
+      "Waiting for job (status 'QUEUED')\n",
+      "Waiting for job (status 'QUEUED')\n",
+      "Waiting for job (status 'QUEUED')\n",
+      "Waiting for job (status 'INITIALIZING')\n",
+      "Waiting for job (status 'RUNNING: OPTIMIZING_FOR_HARDWARE')\n",
+      "Waiting for job (status 'RUNNING: OPTIMIZING_FOR_HARDWARE')\n",
       "Job completed successfully\n"
      ]
     }
@@ -325,7 +325,7 @@
     "    job = serverless.get(title).run(\n",
     "        circuit=random_circuit(3, 3),\n",
     "        circuit_list=[random_circuit(3, 3) for _ in range(3)],\n",
-    "        backend=\"ibm_kyiv\",\n",
+    "        backend=\"ibm_torino\",\n",
     "        optimization_level=1,\n",
     "    )\n",
     "    for retry in range(25):\n",
@@ -334,7 +334,13 @@
     "        if status == \"DONE\":\n",
     "            print(\"Job completed successfully\")\n",
     "            return\n",
-    "        if status not in [\"QUEUED\", \"INITIALIZING\", \"RUNNING\", \"DONE\"]:\n",
+    "        if status not in [\n",
+    "            \"QUEUED\",\n",
+    "            \"INITIALIZING\",\n",
+    "            \"RUNNING\",\n",
+    "            \"RUNNING: OPTIMIZING_FOR_HARDWARE\",\n",
+    "            \"DONE\",\n",
+    "        ]:\n",
     "            raise Exception(\n",
     "                f\"Unexpected job status '{status}'.\\nHere's the logs:\\n\"\n",
     "                + job.logs()\n",
@@ -364,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "cea90969-cfbf-4181-9ffa-524f3709dc69",
    "metadata": {},
    "outputs": [
@@ -389,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "55163053-2cd8-4e5d-8470-d08055a6f401",
    "metadata": {
     "tags": [
@@ -401,111 +407,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Waiting for job (status 'QUEUED')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'QUEUED')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'QUEUED')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'QUEUED')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'QUEUED')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'QUEUED')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'QUEUED')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'QUEUED')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'QUEUED')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'QUEUED')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'INITIALIZING')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'RUNNING')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'RUNNING')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'RUNNING')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Waiting for job (status 'RUNNING')\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Waiting for job (status 'QUEUED')\n",
+      "Waiting for job (status 'QUEUED')\n",
+      "Waiting for job (status 'QUEUED')\n",
+      "Waiting for job (status 'QUEUED')\n",
+      "Waiting for job (status 'QUEUED')\n",
+      "Waiting for job (status 'INITIALIZING')\n",
+      "Waiting for job (status 'RUNNING')\n",
+      "Waiting for job (status 'RUNNING: OPTIMIZING_FOR_HARDWARE')\n",
       "Job completed successfully\n"
      ]
     }
