--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -33,7 +33,7 @@ This section summarizes the recent enhancements and new features for the new [IB
 
 - [Flex Plan](https://www.ibm.com/quantum/blog/flex-plan), a new resource consumption offering, has been released.
 - [Tutorials](/docs/tutorials) are now available on the platform to help users with use-case exploration.
-- The [Qiskit Functions Catalog](https://quantum.cloud.ibm.com/functions) has now launched on the platform.
+- The [Qiskit Functions Catalog](https://quantum.cloud.ibm.com/functions) has launched on the platform.
 - Updated Session OpenAPI schema: `backend_name` field is now nullable.
 
 
