New Platform updates for Latest Updates pg (#3102)
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -8,7 +8,7 @@ in_page_toc_max_heading_level: 2
 
 # Latest updates
 
-*Last updated 24 April 2025*
+*Last updated 8 May 2025*
 
 {/* remember to update the date in the previous line each time this page is updated!!! */}
 
@@ -27,7 +27,18 @@ Jump to [Qiskit SDK](#latest-qiskit-sdk) | [Qiskit Runtime client](#latest-qiski
 <span id="latest-platform"></span>
 ## IBM Quantum Platform
 
-This section summarizes the recent enhancements and new features for IBM Quantum Platform.
+This section summarizes the recent enhancements and new features for the new [IBM Quantum Platform.](https://quantum.cloud.ibm.com/)
+
+**8 May 2025**
+
+- [Flex Plan](https://www.ibm.com/quantum/blog/flex-plan), a new resource consumption offering, has been released.
+- [Tutorials](/docs/tutorials) are now available on the platform to help users with use-case exploration.
+- The [Qiskit Functions Catalog](https://quantum.cloud.ibm.com/functions) has launched on the platform.
+- Updated Session OpenAPI schema: `backend_name` field is now nullable.
+
+
+<details>
+<summary><b>Previous updates</b></summary>
 
 **24 April 2025**
 
@@ -42,9 +53,6 @@ This section summarizes the recent enhancements and new features for IBM Quantum
   - Improved platform stability by improving error handling and better recovery.
   - Addressed an issue that prevented QPU metrics to be displayed for the QPUs in the eu-de region.
 - Deprecation reminder: The deprecation date for IBM Quantum Platform Classic has been set for 1 July 2025. For more information, read the [migration guide.](/docs/migration-guides/classic-iqp-to-cloud-iqp)
-
-<details>
-<summary><b>Previous updates</b></summary>
 
 **10 April 2025**
 
