--- a/docs/api/qiskit/1.4/qiskit.circuit.library.CCXGate.mdx
+++ b/docs/api/qiskit/1.4/qiskit.circuit.library.CCXGate.mdx
@@ -8,12 +8,12 @@ python_api_name: qiskit.circuit.library.CCXGate
 
 # CCXGate
 
-<Class id="qiskit.circuit.library.CCXGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/circuit/library/standard_gates/x.py#L304-L498" signature="qiskit.circuit.library.CCXGate(*args, _force_mutable=False, **kwargs)" modifiers="class">
+<Class id="qiskit.circuit.library.CCXGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/circuit/library/standard_gates/x.py#L304-L497" signature="qiskit.circuit.library.CCXGate(*args, _force_mutable=False, **kwargs)" modifiers="class">
   Bases: [`SingletonControlledGate`](circuit_singleton#qiskit.circuit.singleton.SingletonControlledGate "qiskit.circuit.singleton.SingletonControlledGate")
 
   CCX gate, also known as Toffoli gate.
 
-  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`ccx()`](qiskit.circuit.QuantumCircuit#ccx "qiskit.circuit.QuantumCircuit.ccx") and `toffoli()` methods.
+  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`ccx()`](qiskit.circuit.QuantumCircuit#ccx "qiskit.circuit.QuantumCircuit.ccx") method.
 
   **Circuit symbol:**
 
@@ -226,7 +226,7 @@ $$
 
   ### control
 
-  <Function id="qiskit.circuit.library.CCXGate.control" github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/circuit/library/standard_gates/x.py#L445-L481" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None, annotated=False)">
+  <Function id="qiskit.circuit.library.CCXGate.control" github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/circuit/library/standard_gates/x.py#L444-L480" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None, annotated=False)">
     Controlled version of this gate.
 
     **Parameters**
@@ -247,7 +247,7 @@ $$
 
   ### inverse
 
-  <Function id="qiskit.circuit.library.CCXGate.inverse" github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/circuit/library/standard_gates/x.py#L483-L495" signature="inverse(annotated=False)">
+  <Function id="qiskit.circuit.library.CCXGate.inverse" github="https://github.com/Qiskit/qiskit/tree/stable/1.4/qiskit/circuit/library/standard_gates/x.py#L482-L494" signature="inverse(annotated=False)">
     Return an inverted CCX gate (also a CCX).
 
     **Parameters**
