--- a/docs/api/qiskit/1.4/qiskit.dagcircuit.DAGCircuit.mdx
+++ b/docs/api/qiskit/1.4/qiskit.dagcircuit.DAGCircuit.mdx
@@ -54,7 +54,9 @@ python_api_name: qiskit.dagcircuit.DAGCircuit
   ### duration
 
   <Attribute id="qiskit.dagcircuit.DAGCircuit.duration">
-    Duration.
+    Returns the total duration of the circuit, set by a scheduling transpiler pass. Its unit is specified by [`unit`](#qiskit.dagcircuit.DAGCircuit.unit "qiskit.dagcircuit.DAGCircuit.unit")
+
+    DEPRECATED since Qiskit 1.3.0 and will be removed in Qiskit 3.0.0
   </Attribute>
 
   ### global\_phase
@@ -138,7 +140,9 @@ python_api_name: qiskit.dagcircuit.DAGCircuit
   ### unit
 
   <Attribute id="qiskit.dagcircuit.DAGCircuit.unit">
-    Unit of duration.
+    Returns the unit that duration is specified in.
+
+    DEPRECATED since Qiskit 1.3.0 and will be removed in Qiskit 2.0.0
   </Attribute>
 
   ### wires
