--- a/docs/guides/run-jobs-session.mdx
+++ b/docs/guides/run-jobs-session.mdx
@@ -108,7 +108,7 @@ Default values:
 </LegacyContent>
 <CloudContent>
 
-| Instance type  | Default maximum TTL |
+| Plan type  | Default maximum TTL |
 |----------------|---------------------|
 | All paid plans | 8 hours             |
 | Open           | 10 minutes          |
