--- a/learning/index.mdx
+++ b/learning/index.mdx
@@ -8,3 +8,5 @@ description: This page is for open-source previews only and should not be synced
 This page is for open-source previews only.
 
 If you don't see your course in the following list, edit `learning/index.mdx` and restart the preview.
+
+* [Quantum machine learning](/learning/courses/quantum-machine-learning)
